compiler/testData/diagnostics/tests/secondaryConstructors/resolvePropertyInitializerWithoutPrimary.kt
class A {
    val prop: Int = <!TYPE_MISMATCH!>""<!>
    constructor() {}
}
